import React from 'react';
import {View} from 'react-native';

import Coins from './Coins';
import Watchlists from './Watchlists';

import Header from 'app/components/Header';
import TopNavigation from 'app/components/TopNavigation';

import styles from './styles';

const Markets: React.FC = () => {
  return (
    <View style={styles.container}>
      <Header mode="profile" />
      <View style={styles.content}>
        <TopNavigation
          pages={[
            {
              title: 'Coins',
              component: () => <Coins />,
            },
            {
              title: 'Watchlists',
              component: () => <Watchlists />,
            },
          ]}
        />
      </View>
    </View>
  );
};

export default Markets;
